first change mas ainda há o problema de modo=treino modo=exame

--- a/examples/cloze/_output_/sc_or_s_2024-11-20_16-43-32.Rmd
+++ b/examples/cloze/_output_/sc_or_s_2024-11-20_16-43-32.Rmd
@@ -1,8 +1,8 @@
 # Model C:\Users\pedrocruz\Documents\GitHub\pyequa\examples\cloze\_output_
 
-Produced in 2024-11-20 16:44:58
+Produced in 2024-11-20 16:25:46
 
-# Problems for study  - CLOZE
+# Problem 01 - CLOZE
 
 ## variante 01 (excel row is 001)
 
@@ -12,8 +12,6 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
 ### feedback
 
@@ -29,13 +27,11 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 02 - CLOZE
 
 ## variante 01 (excel row is 003)
 
@@ -45,8 +41,6 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
 ### feedback
 
@@ -62,13 +56,11 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 03 - CLOZE
 
 ## variante 01 (excel row is 005)
 
@@ -76,10 +68,8 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 ### feedback
 
@@ -92,16 +82,14 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 04 - CLOZE
 
 ## variante 01 (excel row is 001)
 
@@ -109,10 +97,8 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'2'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho **'2'**, **deve** ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ### feedback
 
@@ -125,16 +111,14 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'4'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho **'4'**, **deve** ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 01 - CLOZE
 
 ## variante 01 (excel row is 001)
 
@@ -144,8 +128,6 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
 ### feedback
 
@@ -161,13 +143,11 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 02 - CLOZE
 
 ## variante 01 (excel row is 003)
 
@@ -175,10 +155,8 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ### feedback
 
@@ -191,16 +169,14 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'20'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho **'20'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 03 - CLOZE
 
 ## variante 01 (excel row is 005)
 
@@ -208,10 +184,8 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 ### feedback
 
@@ -224,16 +198,14 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 04 - CLOZE
 
 ## variante 01 (excel row is 001)
 
@@ -241,10 +213,8 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ### feedback
 
@@ -257,16 +227,14 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 05 - CLOZE
 
 ## variante 01 (excel row is 003)
 
@@ -274,10 +242,8 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ### feedback
 
@@ -290,16 +256,14 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 06 - CLOZE
 
 ## variante 01 (excel row is 005)
 
@@ -309,8 +273,6 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
 ### feedback
 
@@ -326,13 +288,11 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 01 - CLOZE
 
 ## variante 01 (excel row is 001)
 
@@ -340,10 +300,8 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ### feedback
 
@@ -356,16 +314,14 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 02 - CLOZE
 
 ## variante 01 (excel row is 003)
 
@@ -373,10 +329,8 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ### feedback
 
@@ -389,16 +343,14 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 03 - CLOZE
 
 ## variante 01 (excel row is 005)
 
@@ -408,8 +360,6 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(b)** Com uma amostra de tamanho **'100'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
 ### feedback
 
@@ -424,8 +374,6 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(b)** Com uma amostra de tamanho **'1000'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
 
 ### feedback
 
