--- a/examples/cloze/_output_/sc_or_s_sol_2024-11-20_16-43-32.Rmd
+++ b/examples/cloze/_output_/sc_or_s_sol_2024-11-20_16-43-32.Rmd
@@ -1,6 +1,6 @@
 # Solution to model C:\Users\pedrocruz\Documents\GitHub\pyequa\examples\cloze\_output_
 
-Produced in 2024-11-20 16:44:58
+Produced in 2024-11-20 16:25:46
 
 # Problem 01 - CLOZE
 
@@ -128,26 +128,26 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho ,  ser usado o desvio padrão  
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho ,  ser usado o desvio padrão %0%corrigido\~%100%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido, podedeve, tamanho}
+{justificação, tamanho, podedeve}
 
 e usando
 
-Eq(tamanho, justificação)
+Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{justificação}
+{corrigido}
 
 
 
@@ -157,26 +157,26 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho ,  ser usado o desvio padrão  
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho ,  ser usado o desvio padrão %0%corrigido\~%100%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido, podedeve, tamanho}
+{justificação, tamanho, podedeve}
 
 e usando
 
-Eq(tamanho, justificação)
+Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{justificação}
+{corrigido}
 
 
 # Problem 04 - CLOZE
@@ -187,26 +187,26 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'2'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'2'**, **deve** ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho ,  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
+Com uma amostra de tamanho ,  ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{podedeve, justificação, tamanho}
+{corrigido, tamanho, podedeve}
 
 e usando
 
-Eq(tamanho, corrigido + podedeve)
+Eq(tamanho, justificação)
 
 determina-se
 
-{corrigido}
+{justificação}
 
 
 
@@ -216,26 +216,26 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'4'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'4'**, **deve** ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho ,  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
+Com uma amostra de tamanho ,  ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{podedeve, justificação, tamanho}
+{corrigido, tamanho, podedeve}
 
 e usando
 
-Eq(tamanho, corrigido + podedeve)
+Eq(tamanho, justificação)
 
 determina-se
 
-{corrigido}
+{justificação}
 
 
 # Problem 01 - CLOZE
@@ -329,18 +329,30 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido, tamanho}
+{justificação, tamanho}
+
+e usando
+
+Eq(tamanho, corrigido + justificação)
+
+determina-se
+
+{corrigido}
+
+Sabendo
+
+{corrigido, justificação, tamanho}
 
 e usando
 
@@ -349,18 +361,6 @@ Eq(tamanho, corrigido + podedeve)
 determina-se
 
 {podedeve}
-
-Sabendo
-
-{corrigido, podedeve, tamanho}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{justificação}
 
 
 
@@ -370,18 +370,30 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'20'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'20'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido, tamanho}
+{justificação, tamanho}
+
+e usando
+
+Eq(tamanho, corrigido + justificação)
+
+determina-se
+
+{corrigido}
+
+Sabendo
+
+{corrigido, justificação, tamanho}
 
 e usando
 
@@ -390,18 +402,6 @@ Eq(tamanho, corrigido + podedeve)
 determina-se
 
 {podedeve}
-
-Sabendo
-
-{corrigido, podedeve, tamanho}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{justificação}
 
 
 # Problem 03 - CLOZE
@@ -412,28 +412,28 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000',  ser usado o desvio padrão  
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000',  ser usado o desvio padrão %0%corrigido\~%100%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido, podedeve}
+{justificação, podedeve}
 
 e usando
 
-Eq(tamanho, justificação)
-
 Eq(tamanho, corrigido + justificação)
+
+Eq(tamanho, corrigido + podedeve)
 
 determina-se
 
-{justificação, tamanho}
+{corrigido, tamanho}
 
 
 
@@ -443,28 +443,28 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000',  ser usado o desvio padrão  
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000',  ser usado o desvio padrão %0%corrigido\~%100%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido, podedeve}
+{justificação, podedeve}
 
 e usando
 
-Eq(tamanho, justificação)
-
 Eq(tamanho, corrigido + justificação)
+
+Eq(tamanho, corrigido + podedeve)
 
 determina-se
 
-{justificação, tamanho}
+{corrigido, tamanho}
 
 
 # Problem 04 - CLOZE
@@ -475,30 +475,18 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
+Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{justificação, tamanho}
-
-e usando
-
-Eq(tamanho, corrigido + justificação)
-
-determina-se
-
-{corrigido}
-
-Sabendo
-
-{corrigido, justificação, tamanho}
+{corrigido, tamanho}
 
 e usando
 
@@ -507,6 +495,18 @@ Eq(tamanho, corrigido + podedeve)
 determina-se
 
 {podedeve}
+
+Sabendo
+
+{corrigido, tamanho, podedeve}
+
+e usando
+
+Eq(tamanho, justificação)
+
+determina-se
+
+{justificação}
 
 
 
@@ -516,30 +516,18 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
+Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{justificação, tamanho}
-
-e usando
-
-Eq(tamanho, corrigido + justificação)
-
-determina-se
-
-{corrigido}
-
-Sabendo
-
-{corrigido, justificação, tamanho}
+{corrigido, tamanho}
 
 e usando
 
@@ -548,6 +536,18 @@ Eq(tamanho, corrigido + podedeve)
 determina-se
 
 {podedeve}
+
+Sabendo
+
+{corrigido, tamanho, podedeve}
+
+e usando
+
+Eq(tamanho, justificação)
+
+determina-se
+
+{justificação}
 
 
 # Problem 05 - CLOZE
@@ -558,28 +558,28 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
+Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{podedeve, justificação}
+{corrigido, podedeve}
 
 e usando
 
-Eq(tamanho, corrigido + podedeve)
+Eq(tamanho, justificação)
 
 Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{corrigido, tamanho}
+{justificação, tamanho}
 
 
 
@@ -589,28 +589,28 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
+Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{podedeve, justificação}
+{corrigido, podedeve}
 
 e usando
 
-Eq(tamanho, corrigido + podedeve)
+Eq(tamanho, justificação)
 
 Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{corrigido, tamanho}
+{justificação, tamanho}
 
 
 # Problem 06 - CLOZE
@@ -632,7 +632,7 @@ pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%apro
 
 Sabendo
 
-{podedeve, tamanho}
+{tamanho, podedeve}
 
 e usando
 
@@ -644,7 +644,7 @@ determina-se
 
 Sabendo
 
-{corrigido, podedeve, tamanho}
+{corrigido, tamanho, podedeve}
 
 e usando
 
@@ -673,7 +673,7 @@ pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%apro
 
 Sabendo
 
-{podedeve, tamanho}
+{tamanho, podedeve}
 
 e usando
 
@@ -685,7 +685,7 @@ determina-se
 
 Sabendo
 
-{corrigido, podedeve, tamanho}
+{corrigido, tamanho, podedeve}
 
 e usando
 
@@ -704,28 +704,38 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido}
+{justificação}
 
 e usando
 
 Eq(tamanho, justificação)
 
+determina-se
+
+{tamanho}
+
+Sabendo
+
+{justificação, tamanho}
+
+e usando
+
 Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{justificação, tamanho}
+{corrigido}
 
 Sabendo
 
@@ -747,28 +757,38 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido}
+{justificação}
 
 e usando
 
 Eq(tamanho, justificação)
 
+determina-se
+
+{tamanho}
+
+Sabendo
+
+{justificação, tamanho}
+
+e usando
+
 Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{justificação, tamanho}
+{corrigido}
 
 Sabendo
 
@@ -791,38 +811,28 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
+Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{justificação}
+{corrigido}
 
 e usando
 
 Eq(tamanho, justificação)
 
-determina-se
-
-{tamanho}
-
-Sabendo
-
-{justificação, tamanho}
-
-e usando
-
 Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{corrigido}
+{justificação, tamanho}
 
 Sabendo
 
@@ -844,38 +854,28 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
+Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{justificação}
+{corrigido}
 
 e usando
 
 Eq(tamanho, justificação)
 
-determina-se
-
-{tamanho}
-
-Sabendo
-
-{justificação, tamanho}
-
-e usando
-
 Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{corrigido}
+{justificação, tamanho}
 
 Sabendo
 
