--- a/examples/cloze/_output_/sc_or_s_2024-11-20_16-44-58.Rmd
+++ b/examples/cloze/_output_/sc_or_s_2024-11-20_16-44-58.Rmd
@@ -1,107 +1,8 @@
 # Model C:\Users\pedrocruz\Documents\GitHub\pyequa\examples\cloze\_output_
 
-Produced in 2024-11-20 16:44:58
+Produced in 2024-11-20 16:43:58
 
-# Problems for study  - CLOZE
-
-## variante 01 (excel row is 001)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
-
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
-
-**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
-### feedback
-
-(Consulte o docente das suas turmas ou uma OT.)
-
-
-## variante 02 (excel row is 002)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
-
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
-
-**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
-### feedback
-
-(Consulte o docente das suas turmas ou uma OT.)
-
-
-
-## variante 01 (excel row is 003)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
-
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
-
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
-### feedback
-
-(Consulte o docente das suas turmas ou uma OT.)
-
-
-## variante 02 (excel row is 004)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
-
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
-
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
-### feedback
-
-(Consulte o docente das suas turmas ou uma OT.)
-
-
-
-## variante 01 (excel row is 005)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
-
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
-
-**(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
-### feedback
-
-(Consulte o docente das suas turmas ou uma OT.)
-
-
-## variante 02 (excel row is 006)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
-
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
-
-**(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
-### feedback
-
-(Consulte o docente das suas turmas ou uma OT.)
-
-
+# Problem 01 - CLOZE
 
 ## variante 01 (excel row is 001)
 
@@ -112,7 +13,7 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho **'2'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
@@ -128,46 +29,13 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho **'4'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
-
-## variante 01 (excel row is 001)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
-
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
-
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
-### feedback
-
-(Consulte o docente das suas turmas ou uma OT.)
-
-
-## variante 02 (excel row is 002)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
-
-**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
-
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
-
-### feedback
-
-(Consulte o docente das suas turmas ou uma OT.)
-
-
+# Problem 02 - CLOZE
 
 ## variante 01 (excel row is 003)
 
@@ -175,10 +43,10 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+**(b)** Com uma amostra de tamanho **'10'**, **deve** ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
@@ -191,16 +59,148 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'20'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+**(b)** Com uma amostra de tamanho **'20'**, **deve** ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+# Problem 03 - CLOZE
+
+## variante 01 (excel row is 005)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+
+**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão **corrigido ou não** 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
 
+## variante 02 (excel row is 006)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+
+**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão **corrigido ou não** 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+# Problem 04 - CLOZE
+
+## variante 01 (excel row is 001)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+
+**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+
+**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 02 (excel row is 002)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+
+**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+
+**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+# Problem 01 - CLOZE
+
+## variante 01 (excel row is 001)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+
+**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+
+**(b)** Com uma amostra de tamanho **'2'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 02 (excel row is 002)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+
+**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+
+**(b)** Com uma amostra de tamanho **'4'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+# Problem 02 - CLOZE
+
+## variante 01 (excel row is 003)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+
+**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+
+## variante 02 (excel row is 004)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional \(\sigma^2\).
+
+**(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
+
+### feedback
+
+(Consulte o docente das suas turmas ou uma OT.)
+
+# Problem 03 - CLOZE
 
 ## variante 01 (excel row is 005)
 
@@ -211,7 +211,7 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão **corrigido ou não** 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
@@ -227,13 +227,13 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão **corrigido ou não** 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 04 - CLOZE
 
 ## variante 01 (excel row is 001)
 
@@ -244,7 +244,7 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
@@ -260,13 +260,13 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 05 - CLOZE
 
 ## variante 01 (excel row is 003)
 
@@ -274,10 +274,10 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
@@ -290,16 +290,16 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'20'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 06 - CLOZE
 
 ## variante 01 (excel row is 005)
 
@@ -307,10 +307,10 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
@@ -323,16 +323,16 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 01 - CLOZE
 
 ## variante 01 (excel row is 001)
 
@@ -340,10 +340,10 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
@@ -356,16 +356,16 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 02 - CLOZE
 
 ## variante 01 (excel row is 003)
 
@@ -376,7 +376,7 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
@@ -392,13 +392,13 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 **(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
 (Consulte o docente das suas turmas ou uma OT.)
 
-
+# Problem 03 - CLOZE
 
 ## variante 01 (excel row is 005)
 
@@ -406,10 +406,10 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'100'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
@@ -422,10 +422,10 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Justifique que \(s_c^2\) é estritamente maior que \(s^2\) mas nem sempre "muito maior".
 
-**(b)** Com uma amostra de tamanho **'1000'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
 
-Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil\~%100%não útil\~%100%não compreendo\~%100%acho que não tem solução}.
+Qualidade deste exercício para o estudo: {:MULTICHOICE:=útil~não útil~acho que não tem solução}.
 
 ### feedback
 
