--- a/examples/cloze/_output_/sc_or_s_sol_2024-11-20_16-44-58.Rmd
+++ b/examples/cloze/_output_/sc_or_s_sol_2024-11-20_16-44-58.Rmd
@@ -1,185 +1,8 @@
 # Solution to model C:\Users\pedrocruz\Documents\GitHub\pyequa\examples\cloze\_output_
 
-Produced in 2024-11-20 16:44:58
+Produced in 2024-11-20 16:43:58
 
 # Problem 01 - CLOZE
-
-## variante 01 (excel row is 001)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-**(a)** Verifique que \(s_c^2 > s^2\).
-
-**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{corrigido, justificação, tamanho}
-
-e usando
-
-Eq(tamanho, corrigido + podedeve)
-
-determina-se
-
-{podedeve}
-
-
-
-## variante 02 (excel row is 002)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-**(a)** Verifique que \(s_c^2 > s^2\).
-
-**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{corrigido, justificação, tamanho}
-
-e usando
-
-Eq(tamanho, corrigido + podedeve)
-
-determina-se
-
-{podedeve}
-
-
-# Problem 02 - CLOZE
-
-## variante 01 (excel row is 003)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-**(a)** Verifique que \(s_c^2 > s^2\).
-
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão  
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{corrigido, justificação, podedeve}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{tamanho}
-
-
-
-## variante 02 (excel row is 004)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-**(a)** Verifique que \(s_c^2 > s^2\).
-
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão  
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
-
-
-Sabendo
-
-{corrigido, justificação, podedeve}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{tamanho}
-
-
-# Problem 03 - CLOZE
-
-## variante 01 (excel row is 005)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-**(a)** Verifique que \(s_c^2 > s^2\).
-
-**(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho ,  ser usado o desvio padrão  
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
-
-
-Sabendo
-
-{corrigido, podedeve, tamanho}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{justificação}
-
-
-
-## variante 02 (excel row is 006)
-
-O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
-
-**(a)** Verifique que \(s_c^2 > s^2\).
-
-**(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão **corrigido ou não** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
-
-## answer
-
-Com uma amostra de tamanho ,  ser usado o desvio padrão  
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
-
-
-Sabendo
-
-{corrigido, podedeve, tamanho}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{justificação}
-
-
-# Problem 04 - CLOZE
 
 ## variante 01 (excel row is 001)
 
@@ -198,7 +21,7 @@ pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 Sabendo
 
-{podedeve, justificação, tamanho}
+{podedeve, tamanho, justificação}
 
 e usando
 
@@ -227,7 +50,7 @@ pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 Sabendo
 
-{podedeve, justificação, tamanho}
+{podedeve, tamanho, justificação}
 
 e usando
 
@@ -238,7 +61,125 @@ determina-se
 {corrigido}
 
 
-# Problem 01 - CLOZE
+# Problem 02 - CLOZE
+
+## variante 01 (excel row is 003)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
+
+**(a)** Verifique que \(s_c^2 > s^2\).
+
+**(b)** Com uma amostra de tamanho **'10'**, **deve** ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+## answer
+
+Com uma amostra de tamanho ,  ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+
+
+Sabendo
+
+{podedeve, tamanho, corrigido}
+
+e usando
+
+Eq(tamanho, corrigido + justificação)
+
+determina-se
+
+{justificação}
+
+
+
+## variante 02 (excel row is 004)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
+
+**(a)** Verifique que \(s_c^2 > s^2\).
+
+**(b)** Com uma amostra de tamanho **'20'**, **deve** ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+## answer
+
+Com uma amostra de tamanho ,  ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+
+
+Sabendo
+
+{podedeve, tamanho, corrigido}
+
+e usando
+
+Eq(tamanho, corrigido + justificação)
+
+determina-se
+
+{justificação}
+
+
+# Problem 03 - CLOZE
+
+## variante 01 (excel row is 005)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
+
+**(a)** Verifique que \(s_c^2 > s^2\).
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão **corrigido ou não** 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
+
+## answer
+
+Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000',  ser usado o desvio padrão  
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
+
+
+Sabendo
+
+{podedeve, justificação, corrigido}
+
+e usando
+
+Eq(tamanho, corrigido + podedeve)
+
+determina-se
+
+{tamanho}
+
+
+
+## variante 02 (excel row is 006)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
+
+**(a)** Verifique que \(s_c^2 > s^2\).
+
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), **pode** ser usado o desvio padrão **corrigido ou não** 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
+
+## answer
+
+Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000',  ser usado o desvio padrão  
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
+
+
+Sabendo
+
+{podedeve, justificação, corrigido}
+
+e usando
+
+Eq(tamanho, corrigido + podedeve)
+
+determina-se
+
+{tamanho}
+
+
+# Problem 04 - CLOZE
 
 ## variante 01 (excel row is 001)
 
@@ -246,30 +187,18 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão  
+Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
 pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido, justificação}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{tamanho}
-
-Sabendo
-
-{corrigido, justificação, tamanho}
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -287,30 +216,18 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
 pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão  
+Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
 pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido, justificação}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{tamanho}
-
-Sabendo
-
-{corrigido, justificação, tamanho}
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -319,6 +236,89 @@ Eq(tamanho, corrigido + podedeve)
 determina-se
 
 {podedeve}
+
+
+# Problem 01 - CLOZE
+
+## variante 01 (excel row is 001)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
+
+**(a)** Verifique que \(s_c^2 > s^2\).
+
+**(b)** Com uma amostra de tamanho **'2'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+## answer
+
+Com uma amostra de tamanho ,  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+
+
+Sabendo
+
+{podedeve, tamanho}
+
+e usando
+
+Eq(tamanho, justificação)
+
+determina-se
+
+{justificação}
+
+Sabendo
+
+{podedeve, tamanho, justificação}
+
+e usando
+
+Eq(tamanho, corrigido + podedeve)
+
+determina-se
+
+{corrigido}
+
+
+
+## variante 02 (excel row is 002)
+
+O desvio padrão corrigido é um estimador centrado para o desvio padrão do modelo populacional.
+
+**(a)** Verifique que \(s_c^2 > s^2\).
+
+**(b)** Com uma amostra de tamanho **'4'**, **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+
+## answer
+
+Com uma amostra de tamanho ,  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+
+
+Sabendo
+
+{podedeve, tamanho}
+
+e usando
+
+Eq(tamanho, justificação)
+
+determina-se
+
+{justificação}
+
+Sabendo
+
+{podedeve, tamanho, justificação}
+
+e usando
+
+Eq(tamanho, corrigido + podedeve)
+
+determina-se
+
+{corrigido}
 
 
 # Problem 02 - CLOZE
@@ -329,38 +329,28 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido, tamanho}
+{podedeve, justificação}
 
 e usando
 
 Eq(tamanho, corrigido + podedeve)
 
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{corrigido, podedeve, tamanho}
-
-e usando
-
-Eq(tamanho, justificação)
+Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{justificação}
+{tamanho, corrigido}
 
 
 
@@ -370,38 +360,28 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'20'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
+pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
-pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido, tamanho}
+{podedeve, justificação}
 
 e usando
 
 Eq(tamanho, corrigido + podedeve)
 
-determina-se
-
-{podedeve}
-
-Sabendo
-
-{corrigido, podedeve, tamanho}
-
-e usando
-
-Eq(tamanho, justificação)
+Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{justificação}
+{tamanho, corrigido}
 
 
 # Problem 03 - CLOZE
@@ -423,17 +403,17 @@ pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%apro
 
 Sabendo
 
-{corrigido, podedeve}
+{podedeve, corrigido}
 
 e usando
 
-Eq(tamanho, justificação)
-
 Eq(tamanho, corrigido + justificação)
+
+Eq(tamanho, justificação)
 
 determina-se
 
-{justificação, tamanho}
+{tamanho, justificação}
 
 
 
@@ -454,17 +434,17 @@ pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%apro
 
 Sabendo
 
-{corrigido, podedeve}
+{podedeve, corrigido}
 
 e usando
 
-Eq(tamanho, justificação)
-
 Eq(tamanho, corrigido + justificação)
+
+Eq(tamanho, justificação)
 
 determina-se
 
-{justificação, tamanho}
+{tamanho, justificação}
 
 
 # Problem 04 - CLOZE
@@ -486,7 +466,7 @@ pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 Sabendo
 
-{justificação, tamanho}
+{tamanho, justificação}
 
 e usando
 
@@ -498,7 +478,7 @@ determina-se
 
 Sabendo
 
-{corrigido, justificação, tamanho}
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -527,7 +507,7 @@ pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 Sabendo
 
-{justificação, tamanho}
+{tamanho, justificação}
 
 e usando
 
@@ -539,7 +519,7 @@ determina-se
 
 Sabendo
 
-{corrigido, justificação, tamanho}
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -558,28 +538,38 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'10'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
+Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{podedeve, justificação}
+{tamanho, corrigido}
 
 e usando
-
-Eq(tamanho, corrigido + podedeve)
 
 Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{corrigido, tamanho}
+{justificação}
+
+Sabendo
+
+{tamanho, justificação, corrigido}
+
+e usando
+
+Eq(tamanho, corrigido + podedeve)
+
+determina-se
+
+{podedeve}
 
 
 
@@ -589,28 +579,38 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), **deve** ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
-pois o desvio padrão corrigido é **maior, ou bastante maior, que o** desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho **'20'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000',  ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
-pois o desvio padrão corrigido é  desvio padrão não corrigido.
+Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão  
+pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{podedeve, justificação}
+{tamanho, corrigido}
 
 e usando
-
-Eq(tamanho, corrigido + podedeve)
 
 Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{corrigido, tamanho}
+{justificação}
+
+Sabendo
+
+{tamanho, justificação, corrigido}
+
+e usando
+
+Eq(tamanho, corrigido + podedeve)
+
+determina-se
+
+{podedeve}
 
 
 # Problem 06 - CLOZE
@@ -621,18 +621,30 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'100'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho ,  ser usado o desvio padrão %0%corrigido\~%100%corrigido ou não 
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000', %0%deve\~%100%pode ser usado o desvio padrão  
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{podedeve, tamanho}
+{justificação, corrigido}
+
+e usando
+
+Eq(tamanho, corrigido + justificação)
+
+determina-se
+
+{tamanho}
+
+Sabendo
+
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -640,19 +652,7 @@ Eq(tamanho, corrigido + podedeve)
 
 determina-se
 
-{corrigido}
-
-Sabendo
-
-{corrigido, podedeve, tamanho}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{justificação}
+{podedeve}
 
 
 
@@ -662,18 +662,30 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'1000'**, **pode** ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
-pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
+pois o desvio padrão corrigido é **aproximado ao** desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho ,  ser usado o desvio padrão %0%corrigido\~%100%corrigido ou não 
-pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
+Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000', %0%deve\~%100%pode ser usado o desvio padrão  
+pois o desvio padrão corrigido é  desvio padrão não corrigido.
 
 
 Sabendo
 
-{podedeve, tamanho}
+{justificação, corrigido}
+
+e usando
+
+Eq(tamanho, corrigido + justificação)
+
+determina-se
+
+{tamanho}
+
+Sabendo
+
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -681,19 +693,7 @@ Eq(tamanho, corrigido + podedeve)
 
 determina-se
 
-{corrigido}
-
-Sabendo
-
-{corrigido, podedeve, tamanho}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{justificação}
+{podedeve}
 
 
 # Problem 01 - CLOZE
@@ -704,32 +704,42 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+**(b)** Com uma amostra de tamanho **'2'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão  
+Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
 pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido}
+{tamanho}
 
 e usando
 
 Eq(tamanho, justificação)
 
+determina-se
+
+{justificação}
+
+Sabendo
+
+{tamanho, justificação}
+
+e usando
+
 Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{justificação, tamanho}
+{corrigido}
 
 Sabendo
 
-{corrigido, justificação, tamanho}
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -747,32 +757,42 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão **corrigido** 
+**(b)** Com uma amostra de tamanho **'4'**, {:MULTICHOICE_S:%100%deve\~%0%pode} ser usado o desvio padrão {:MULTICHOICE_S:%100%corrigido\~%0%corrigido ou não} 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%100%maior, ou bastante maior, que o\~%0%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho %100%'2'\~%100%'4'\~%100%'10'\~%100%'20'\~%0%'100'\~%0%'1000', %100%deve\~%0%pode ser usado o desvio padrão  
+Com uma amostra de tamanho , %100%deve\~%0%pode ser usado o desvio padrão %100%corrigido\~%0%corrigido ou não 
 pois o desvio padrão corrigido é %100%maior, ou bastante maior, que o\~%0%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{corrigido}
+{tamanho}
 
 e usando
 
 Eq(tamanho, justificação)
 
+determina-se
+
+{justificação}
+
+Sabendo
+
+{tamanho, justificação}
+
+e usando
+
 Eq(tamanho, corrigido + justificação)
 
 determina-se
 
-{justificação, tamanho}
+{corrigido}
 
 Sabendo
 
-{corrigido, justificação, tamanho}
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -814,7 +834,7 @@ determina-se
 
 Sabendo
 
-{justificação, tamanho}
+{tamanho, justificação}
 
 e usando
 
@@ -826,7 +846,7 @@ determina-se
 
 Sabendo
 
-{corrigido, justificação, tamanho}
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -867,7 +887,7 @@ determina-se
 
 Sabendo
 
-{justificação, tamanho}
+{tamanho, justificação}
 
 e usando
 
@@ -879,7 +899,7 @@ determina-se
 
 Sabendo
 
-{corrigido, justificação, tamanho}
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -898,42 +918,32 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'100'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho , %0%deve\~%100%pode ser usado o desvio padrão %0%corrigido\~%100%corrigido ou não 
+Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000', %0%deve\~%100%pode ser usado o desvio padrão  
 pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{tamanho}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{justificação}
-
-Sabendo
-
-{justificação, tamanho}
+{corrigido}
 
 e usando
 
 Eq(tamanho, corrigido + justificação)
 
+Eq(tamanho, justificação)
+
 determina-se
 
-{corrigido}
+{tamanho, justificação}
 
 Sabendo
 
-{corrigido, justificação, tamanho}
+{tamanho, justificação, corrigido}
 
 e usando
 
@@ -951,42 +961,32 @@ O desvio padrão corrigido é um estimador centrado para o desvio padrão do mod
 
 **(a)** Verifique que \(s_c^2 > s^2\).
 
-**(b)** Com uma amostra de tamanho **'1000'**, {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão {:MULTICHOICE_S:%0%corrigido\~%100%corrigido ou não} 
+**(b)** Com uma amostra de tamanho {:MULTICHOICE_S:%0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000'} (indique uma de várias soluções), {:MULTICHOICE_S:%0%deve\~%100%pode} ser usado o desvio padrão **corrigido ou não** 
 pois o desvio padrão corrigido é {:MULTICHOICE_S:%0%maior, ou bastante maior, que o\~%100%aproximado ao} desvio padrão não corrigido.
 
 ## answer
 
-Com uma amostra de tamanho , %0%deve\~%100%pode ser usado o desvio padrão %0%corrigido\~%100%corrigido ou não 
+Com uma amostra de tamanho %0%'2'\~%0%'4'\~%0%'10'\~%0%'20'\~%100%'100'\~%100%'1000', %0%deve\~%100%pode ser usado o desvio padrão  
 pois o desvio padrão corrigido é %0%maior, ou bastante maior, que o\~%100%aproximado ao desvio padrão não corrigido.
 
 
 Sabendo
 
-{tamanho}
-
-e usando
-
-Eq(tamanho, justificação)
-
-determina-se
-
-{justificação}
-
-Sabendo
-
-{justificação, tamanho}
+{corrigido}
 
 e usando
 
 Eq(tamanho, corrigido + justificação)
 
+Eq(tamanho, justificação)
+
 determina-se
 
-{corrigido}
+{tamanho, justificação}
 
 Sabendo
 
-{corrigido, justificação, tamanho}
+{tamanho, justificação, corrigido}
 
 e usando
 
